# Regexes

./: .gitignore  README.md  _test.py  pyproject.toml  regexes.py
Regexes/: __init__.py  regexes.py
Regexes/utils/: __init__.py  strings.py
