[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Regexes"
version = "0.0.1"
authors = [{ name = "Yusuf Berkay Girgin" }]
description = "Common Regexes via Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ybgirgin3/Regexes"
