[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Regexes"
version = "0.0.3"
authors = [{ name = "Yusuf Berkay Girgin" }]
description = "Common Regexes via Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ybgirgin3/Regexes"
